[gd_scene load_steps=8 format=2]

[ext_resource path="res://Screens/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Screens/CreditsScreen.gd" type="Script" id=2]
[ext_resource path="res://Interfaces/label_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Interfaces/SceneTransitionRect.tscn" type="PackedScene" id=4]
[ext_resource path="res://Screens/main_screen_background.png" type="Texture" id=6]
[ext_resource path="res://Interfaces/ButtonSFX.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "AnimateText"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/MainMenuButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/QuitButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.4, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CreditsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
main_menu_path = "res://Screens/MainScreen.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0

[node name="TopPad" type="Control" parent="MarginContainer/VBoxContainer"]
margin_right = 1880.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 1880.0
margin_bottom = 309.0

[node name="LeftPad" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 624.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 628.0
margin_right = 1252.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "A game by Henrique \"Pigdev\" Campos
---
Most Graphics by GDQuest
---
Audio by Juhani Junkala"
align = 1
valign = 2
autowrap = true
percent_visible = 0.0

[node name="RightPad" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1256.0
margin_right = 1880.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 313.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -55.0
margin_right = 199.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSFX" parent="MarginContainer/VBoxContainer/MarginContainer/MainMenuButton" instance=ExtResource( 7 )]

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 103.0
margin_right = 199.0
margin_bottom = 213.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSFX" parent="MarginContainer/VBoxContainer/MarginContainer/QuitButton" instance=ExtResource( 7 )]

[node name="SceneTransitionRect" parent="." instance=ExtResource( 4 )]
next_scene_path = "res://Game.tscn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AnimateText = SubResource( 1 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/MainMenuButton" to="MarginContainer/VBoxContainer/MarginContainer/MainMenuButton/ButtonSFX" method="play"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/QuitButton" to="MarginContainer/VBoxContainer/MarginContainer/QuitButton/ButtonSFX" method="play"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="fade_finished" from="SceneTransitionRect" to="." method="_on_SceneTransitionRect_fade_finished"]
